<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".WeatherDetails">

    <!--    Location Label-->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/cityTextView"
        android:text="Ottawa, ON"
        android:layout_centerHorizontal="true"
        android:textSize="40sp"/>

    <!--    Current Temperature-->
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:id="@+id/currentTemperatureContainer"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:layout_marginTop="10dp"
        android:orientation="horizontal"
        android:layout_below="@id/cityTextView">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingEnd="10dp"
            android:id="@+id/currentTemperatureLabel"
            android:text="@string/current_temp_label"
            android:textSize="20sp"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/currentTemperatureTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/temperature_celsius"
            android:textSize="20sp" />
    </LinearLayout>

    <!--    High Temperature-->
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:id="@+id/highTemperatureContainer"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:layout_marginTop="10dp"
        android:orientation="horizontal"
        android:layout_below="@id/currentTemperatureContainer">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingEnd="10dp"
            android:id="@+id/highTemperatureLabel"
            android:text="@string/current_high_label"
            android:textSize="20sp"
            android:textStyle="bold"/>
        <TextView
            android:id="@+id/highTemperatureTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/temperature_celsius"
            android:textSize="20sp"/>
    </LinearLayout>

    <!--    Low Temperature-->
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:id="@+id/lowTemperatureContainer"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:layout_marginTop="10dp"
        android:orientation="horizontal"
        android:layout_below="@id/highTemperatureContainer">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingEnd="10dp"
            android:id="@+id/lowTemperatureLabel"
            android:text="@string/current_low_label"
            android:textSize="20sp"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/lowTemperatureTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/temperature_celsius"
            android:textSize="20sp"/>
    </LinearLayout>

    <!--    Current Weather Description-->
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:id="@+id/currentWeatherDescriptionContainer"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:layout_marginTop="10dp"
        android:orientation="horizontal"
        android:layout_below="@id/lowTemperatureContainer">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingEnd="10dp"
            android:id="@+id/currentTemperatureDescriptionLabel"
            android:text="@string/current_desc_label"
            android:textSize="20sp"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/weatherDescriptionTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Cloudy"
            android:textSize="20sp"/>
    </LinearLayout>

    <!--    Future Weather Label-->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/futureWeatherLabelTextView"
        android:layout_below="@id/currentWeatherDescriptionContainer"
        android:layout_marginTop="30dp"
        android:text="@string/future_weather_label"
        android:layout_centerHorizontal="true"
        android:textSize="20sp"
        android:textStyle="bold"/>

    <!--    Future High Temperature-->
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:id="@+id/futureHighTemperatureContainer"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:layout_marginTop="20dp"
        android:orientation="horizontal"
        android:layout_below="@id/futureWeatherLabelTextView">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingEnd="10dp"
            android:id="@+id/futureHighLabelTextView"
            android:text="@string/future_high_label"
            android:textSize="20sp"
            android:textStyle="bold"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/futureHighTemperatureTextView"
            android:text="@string/temperature_celsius"
            android:textSize="20sp"/>
    </LinearLayout>

    <!--    Future Low Temperature-->
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:id="@+id/futureLowTemperatureContainer"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:layout_marginTop="10dp"
        android:orientation="horizontal"
        android:layout_below="@id/futureHighTemperatureContainer">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingEnd="10dp"
            android:id="@+id/futureLowLabelTextView"
            android:text="@string/future_low_label"
            android:textSize="20sp"
            android:textStyle="bold"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/futureLowTemperatureTextView"
            android:text="@string/temperature_celsius"
            android:textSize="20sp"/>
    </LinearLayout>

</RelativeLayout>